Version 1.1.0 [WIP]
-------------------------------------------------------------------------
* Allow for the retrieval of postcodes from city files (#44)
* Maxmind calls should be slightly faster due to some pre-cacheing
* Internal Maxmind dataset updated

Version 1.0.1
-------------------------------------------------------------------------
* Functions registered with R's C API and namespacing system
* ip2location() documentation clarified
* R-side functions now automatically generate absolute paths to the database files.
* Works on GCC 7.1

Version 1.0.0
-------------------------------------------------------------------------
* Allow retrieving isp, organization, autonomous system number, and autonomous system organization from MaxMind (with an ISP database).
* Support for ip2location binaries is provided through the ip2location() function.

Version 0.8.0
-------------------------------------------------------------------------

DEVELOPMENT
* Using longer delay for requests to ip-api.com due to new API rate limits.

Version 0.7.0
-------------------------------------------------------------------------

NEW FEATURES
* Added feature to retrieve city_geoname_id from maxmind databases
* Unidenfitiable IP addresses will return NAs from maxmind()

DEVELOPMENT
* The vignette, and documentation of the maxmind function, have been improved to make explicit
the datasets rgeolocate ships with (#25)
* MaxMind free datasets updated.
* Tests have been rebuilt to be tolerant of server-side problems in the case of remote API calls.

Version 0.6.0
-------------------------------------------------------------------------

DEVELOPMENT
* Internal country DB updated.
* client_info() and other telize-based functionality deprecated, as they have shut down their public API.

Version 0.5.0
-------------------------------------------------------------------------

NEW FEATURES
* freegeoip() is deprecated as the service is too unreliable to be trusted.