@@ -2,7 +2,8 @@ Version 1.1.0 [WIP]
 -------------------------------------------------------------------------
 * Allow for the retrieval of postcodes from city files (#44)
 * Maxmind calls should be slightly faster due to some pre-cacheing
-* Internal Maxmind dataset updated
+* Internal Maxmind dataset updated (#47)
+* Support for ipinfo.io (ip_info()) has been integrated. (#46)
 
 Version 1.0.1
 -------------------------------------------------------------------------
